*SVN*

* Use Date#to_s(:db) for quoted dates.  #7411 [Michael Schoen]

* Don't create instance writer methods for class attributes.  Closes #7401 [Rick]

* Docs: validations examples.  #7343 [zackchandler]

* Add missing tests ensuring callbacks work with class inheritance.  Closes #7339 [sandofsky]

* Fixtures use the table name and connection from set_fixture_class.  #7330 [Anthony Eden]

* Remove useless code in #attribute_present? since 0 != blank?.  Closes #7249 [Josh Susser]

* Fix minor doc typos. Closes #7157 [Josh Susser]

* Fix incorrect usage of #classify when creating the eager loading join statement.  Closes #7044 [Josh Susser]

* SQLServer: quote table name in indexes query.  #2928 [keithm@infused.org]

* Subclasses of an abstract class work with single-table inheritance.  #5704, #7284 [BertG, nick+rails@ag.arizona.edu]

* Make sure sqlite3 driver closes open connections on disconnect [Rob Rasmussen]

* [DOC] clear up some ambiguity with the way has_and_belongs_to_many creates the default join table name.  #7072 [jeremymcanally]

* change_column accepts :default => nil. Skip column options for primary keys.  #6956, #7048 [dcmanges, Jeremy Kemper]

* MySQL, PostgreSQL: change_column_default quotes the default value and doesn't lose column type information.  #3987, #6664 [Jonathan Viney, manfred, altano@bigfoot.com]

* Oracle: create_table takes a :sequence_name option to override the 'tablename_seq' default.  #7000 [Michael Schoen]

* MySQL: retain SSL settings on reconnect.  #6976 [randyv2]

* Apply scoping during initialize instead of create.  Fixes setting of foreign key when using find_or_initialize_by with scoping. [Cody Fauser]

* SQLServer: handle [quoted] table names.  #6635 [rrich]

* acts_as_nested_set works with single-table inheritance.  #6030 [Josh Susser]

* PostgreSQL, Oracle: correctly perform eager finds with :limit and :order.  #4668, #7021 [eventualbuddha, Michael Schoen]
