@@ -460,6 +460,12 @@ class FinderTest < Test::Unit::TestCase
     end
   end
 
+  # http://dev.rubyonrails.org/ticket/6778
+  def test_find_ignores_previously_inserted_record
+    post = Post.create!
+    assert_equal [], Post.find_all_by_id(nil)
+  end
+
   def test_find_by_empty_ids
     assert_equal [], Post.find([])
   end
